--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -6,5 +6,22 @@
 </head>
 <body>
     <h1 th:text="'Lis of Vets'">Lis of Vets ...</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="vet : ${vets}">
+            <td th:text="${vet?.id}">1</td>
+            <td th:text="${vet?.firstName}">Vasantha</td>
+            <td th:text="${vet?.lastName}">Thumati</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
