--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Vets</title>
@@ -7,12 +7,12 @@
 <body>
     <h1 th:text="'Lis of Owners'">Owners List ...</h1>
 
-    <table>
+    <table class="table table-striped">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>First Name</th>
-                <th>Last Name</th>
+                <th style="width: 300px;">Id</th>
+                <th style="width: 300px;">First Name</th>
+                <th style="width: 300px;">Last Name</th>
             </tr>
         </thead>
         <tbody>
